# OpenCrab

./: .gitignore  LICENSE  README.md  pyproject.toml
opencrab/: __init__.py  cli.py  config.py
opencrab/intercept/: __init__.py  server.py  storage.py
opencrab/intercept/providers/: __init__.py  anthropic.py  base.py  openai.py
opencrab/rollout/: __init__.py  diff.py  extractor.py  trajectory_analyzer.py
opencrab/rollout/prompts/: __init__.py  analyzer_system_prompt.txt
opencrab/rollout/transforms/: __init__.py  huggingface.py  jsonl.py
opencrab/serving/: __init__.py  server.py
opencrab/serving/routers/: __init__.py  routers.py
opencrab/tests/: __init__.py  test_intercept.py  test_rollout.py  test_serving.py  test_training.py
opencrab/training/: __init__.py  pipeline.py
